--- a/index.html
+++ b/index.html
@@ -1,79 +1,132 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE html><html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Гадалка Алина</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Гадалка Неля – Привороты и Гадание Онлайн</title>
   <style>
-    body { font-family: sans-serif; background: #fdf6f6; color: #222; margin: 0; padding: 0; }
-    header { background: #8b0000; color: white; padding: 30px 20px; text-align: center; }
-    h1 { margin: 0; font-size: 2em; }
-    h2 { color: #8b0000; }
-    .content { padding: 20px; max-width: 800px; margin: auto; }
-    .services, .contacts, .reviews { margin-bottom: 30px; }
-    .contact-links a { margin-right: 15px; text-decoration: none; color: #8b0000; font-weight: bold; }
-    .review { background: #fff; border-radius: 8px; padding: 15px; margin-bottom: 15px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); display: flex; gap: 15px; }
-    .review img { width: 50px; height: 50px; border-radius: 50%; object-fit: cover; }
-    .review-text { flex: 1; }
+    body {
+      margin: 0;
+      font-family: 'Georgia', serif;
+      background-color: #f9f4f9;
+      color: #2c003e;
+    }
+    header {
+      background: linear-gradient(135deg, #7e1f86, #c678dd);
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.5em;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.2em;
+      margin-top: 10px;
+    }
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+    }
+    .services, .reviews, .contact {
+      margin-top: 40px;
+    }
+    h2 {
+      color: #7e1f86;
+    }
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .avatar {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+    .review {
+      display: flex;
+      align-items: flex-start;
+    }
+    .review p {
+      margin: 0;
+    }
+    .buttons a {
+      display: inline-block;
+      margin: 10px 5px;
+      padding: 12px 20px;
+      background-color: #7e1f86;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+    .buttons a:hover {
+      background-color: #5e0f64;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #999;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Гадалка Алина</h1>
-    <p>22 года опыта. Помощь судьбы без магического вреда.</p>
+    <h1>Гадалка Неля</h1>
+    <p>Гадаю на любовь, судьбу и помогаю наладить отношения. 22 года опыта.</p>
   </header>
-
-  <div class="content">
-    <section class="services">
-      <h2>Услуги</h2>
-      <ul>
-        <li>Экспресс мини-расклад: <strong>5 минут — бесплатно</strong></li>
-        <li>Полный расклад: <strong>до 30 минут — 25 €</strong></li>
-        <li>Любовный приворот <strong>без чёрной магии и последствий</strong></li>
-      </ul>
-    </section>
-
-    <section class="contacts">
-      <h2>Контакты</h2>
-      <p>Связаться можно через:</p>
-      <div class="contact-links">
-        <a href="https://t.me/+380975101001" target="_blank">Telegram</a>
-        <a href="viber://chat?number=+380975101001" target="_blank">Viber</a>
-        <a href="https://wa.me/380975101001" target="_blank">WhatsApp</a>
+  <section class="services">
+    <h2>Мои услуги</h2>
+    <div class="card">
+      <h3>Экспресс-расклад</h3>
+      <p>5 минут / бесплатно. Ответ на 1 вопрос, чтобы познакомиться с моей энергетикой.</p>
+    </div>
+    <div class="card">
+      <h3>Полный расклад на картах Таро</h3>
+      <p>До 30 минут / 25 € — полный анализ ситуации и возможных путей решения.</p>
+    </div>
+    <div class="card">
+      <h3>Любовный приворот (без чёрной магии)</h3>
+      <p>Без вреда и последствий. Помогу восстановить отношения и вернуть любимого человека.</p>
+    </div>
+  </section>
+  <section class="reviews">
+    <h2>Отзывы</h2>
+    <div class="card review">
+      <img src="https://randomuser.me/api/portraits/women/45.jpg" alt="avatar" class="avatar">
+      <div>
+        <p><strong>Ольга:</strong> Спасибо за приворот — через 3 дня он сам написал!</p>
       </div>
-    </section>
-
-    <section class="reviews">
-      <h2>Отзывы</h2>
-      <div class="review">
-        <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="avatar"/>
-        <div class="review-text">
-          <strong>Екатерина, 32 года</strong>
-          <p>Спасибо вам, Алина. После расклада многое прояснилось, а главное — всё сбылось! Очень точная диагностика.</p>
-        </div>
+    </div>
+    <div class="card review">
+      <img src="https://randomuser.me/api/portraits/men/23.jpg" alt="avatar" class="avatar">
+      <div>
+        <p><strong>Игорь:</strong> После расклада всё стало понятно, благодарю за честность!</p>
       </div>
-      <div class="review">
-        <img src="https://randomuser.me/api/portraits/men/42.jpg" alt="avatar"/>
-        <div class="review-text">
-          <strong>Олег, 38 лет</strong>
-          <p>Приворот помог вернуть мою девушку. Никакой чёрной магии, всё чисто. Благодарю за помощь.</p>
-        </div>
+    </div>
+    <div class="card review">
+      <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="avatar" class="avatar">
+      <div>
+        <p><strong>Наталья:</strong> Читает карты точно. Уже дважды обращалась, всё совпало.</p>
       </div>
-      <div class="review">
-        <img src="https://randomuser.me/api/portraits/women/12.jpg" alt="avatar"/>
-        <div class="review-text">
-          <strong>Марина, 45 лет</strong>
-          <p>Очень душевный подход. Экспресс-расклад бесплатно — удивительно, но даже за 5 минут всё попала в точку.</p>
-        </div>
-      </div>
-      <div class="review">
-        <img src="https://randomuser.me/api/portraits/men/10.jpg" alt="avatar"/>
-        <div class="review-text">
-          <strong>Андрей, 29 лет</strong>
-          <p>Получил расклад и рекомендации — стало легче на душе. Спасибо большое за поддержку и советы.</p>
-        </div>
-      </div>
-    </section>
-  </div>
+    </div>
+  </section>
+  <section class="contact">
+    <h2>Связаться со мной</h2>
+    <p>Пишите в любой удобный мессенджер:</p>
+    <div class="buttons">
+      <a href="viber://chat?number=%2B380975101001">Viber</a>
+      <a href="https://wa.me/380975101001">WhatsApp</a>
+      <a href="https://t.me/nelya_tarot">Telegram</a>
+    </div>
+  </section>
+  <footer>
+    <p>© 2025 Гадалка Неля. Все права защищены.</p>
+  </footer>
 </body>
 </html>
